@@ -1,4 +1,1 @@
-<?php
-
-define('MW_INSTALL_PHP5_EXT', 1);
-require './index.php';
+<?php require( dirname( dirname( __FILE__ ) ) . '/mw-config/index.php5' );
