@@ -451,6 +451,7 @@ LocalSettings.php. The specific bugs are listed below in the general notes.
 * (bug 18372) $wgFileExtensions will now override $wgFileBlacklist 
 * (bug 25512) Subcategory list should not include category prefix for members.
 * (bug 20244) Installer does not validate SQLite database directory for stable path
+* (bug 1379) Installer directory conflicts with some hosts' configuration panel.
 
 === API changes in 1.17 ===
 * (bug 22738) Allow filtering by action type on query=logevent.
